--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,9 +21,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: "3.x"
       - name: Check for licenses
@@ -42,8 +42,15 @@ jobs:
         run: |
           pip install build
           python -m build
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+          publish-to-pypi:
+            name: >-
+              Publish Python 🐍 distribution 📦 to PyPI
+            if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+            needs:
+            - build
+            runs-on: ubuntu-latest
+            environment:
+              name: pypi
+              url: https://pypi.org/p/happy_kostadin  # Replace happy_kostadin with your PyPI project name
+            permissions:
+              id-token: write  # IMPORTANT: mandatory for trusted publishing
