--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -54,3 +54,10 @@ jobs:
               url: https://pypi.org/p/happy_kostadin  # Replace happy_kostadin with your PyPI project name
             permissions:
               id-token: write  # IMPORTANT: mandatory for trusted publishing
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
+      - name: Publish distribution 📦 to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
