--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,17 +21,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v3
         with:
           python-version: "3.x"
       - name: Check for licenses
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install license_scanner
-          python -m license_scanner -m whitelist
+          python -m license_scanner.cli -m whitelist
 
       - name: Pytest
         run: |
@@ -42,22 +41,8 @@ jobs:
         run: |
           pip install build
           python -m build
-          publish-to-pypi:
-            name: >-
-              Publish Python 🐍 distribution 📦 to PyPI
-            if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
-            needs:
-            - build
-            runs-on: ubuntu-latest
-            environment:
-              name: pypi
-              url: https://pypi.org/p/happy_kostadin  # Replace happy_kostadin with your PyPI project name
-            permissions:
-              id-token: write  # IMPORTANT: mandatory for trusted publishing
-      - name: Download all the dists
-        uses: actions/download-artifact@v3
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
-          name: python-package-distributions
-          path: dist/
-      - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
