--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,7 +30,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          python -m license_scanner.cli -m whitelist
+          pip install license_scanner
+          python -m license_scanner -m whitelist
 
       - name: Pytest
         run: |
