add check for post fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "happy_kostadin"
 dynamic = ["version"]
-dependencies = ["setuptools>=62", "tqdm>=4.66.1"]
+dependencies = ["setuptools>=62", "tqdm>=4.66.1", "tomli>=1.1.0; python_version < '3.11'"]
 readme = "README.md"
 keywords = ["crlf", "lf", "line-ending", "checker"]
 license = { text = "MIT" }
@@ -31,6 +31,13 @@ sources = ["src"]
 [build-system]
 requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
 build-backend = "hatchling.build"
+
+[tool.happy_kostadin]
+allowed-post-fixes = [
+  ".py",
+  ".md",
+  ".gitignore",
+]
 
 [tool.license_scanner]
 allowed-licenses = [
