--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ dynamic = ["version"]
 dependencies = ["setuptools>=62", "tqdm>=4.66.1", "tomli>=1.1.0; python_version < '3.11'"]
 readme = "README.md"
 keywords = ["crlf", "lf", "line-ending", "checker"]
-license = { text = "MIT" }
+license = { text = "Apache-2.0" }
 requires-python = ">=3.9"
 authors = [{ name = "Tom Nijhof", email = "tomsspamadress@gmail.com" }]
 classifiers = [
@@ -21,7 +21,7 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "Development Status :: 4 - Beta",
-  "License :: OSI Approved :: MIT License",
+  "License :: OSI Approved :: Apache-2.0",
 ]
 
 [tool.hatch.build.targets.wheel]
