--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "Development Status :: 4 - Beta",
-  "License :: OSI Approved :: Apache-2.0",
+  "License :: OSI Approved :: Apache Software License",
 ]
 
 [tool.hatch.build.targets.wheel]
